@@ -1,13 +1,16 @@
 # Programming Assignment 8
 
-Programming Assignment 8 is the conclusion of the Pac-Man game assignments, in which the game has real visuals added and is played in a separate window rather than the terminal. This assignment introduces us to JavaFX, which is the standard GUI library for Java. 
+Programming Assignment 8 is the conclusion of the Pac-Man game assignments, in which a simplified game of Pac-Man has real visuals added and is played in a separate window rather than in the terminal. This assignment introduces us to JavaFX, which is the standard GUI library for Java. 
+
+To run on Windows command prompt: 
+- Make sure that JavaFX is downloaded: https://gluonhq.com/products/javafx/
+- Add an environment variable with `set PATH_TO_FX="path\to\javafx-sdk-14\lib"` (modify path as needed)
+- Compile with `javac --module-path %PATH_TO_FX% --add-modules javafx.controls GuiPacman.java`
+- Run with `java --module-path %PATH_TO_FX% --add-modules javafx.controls GuiPacman`
+
 
 ## Author
 
 * **Kathy Li** - *Initial work* - [cs11wml](mailto:kal005@ucsd.edu)
-
-
-## Acknowledgments
-None 
 
 
